<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile_dr"
            android:fontFamily="@font/poppins_regular"
            android:visible="false"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:fontFamily="@font/poppins_regular"
            android:title="@string/menu_my_profile" />
      <!--  <item
            android:id="@+id/nav_career"
            android:icon="@drawable/ic_menu_gallery"
            android:fontFamily="@font/roboto_bold"
            android:title="@string/menu_career" />-->
       <!-- <item
            android:id="@+id/nav_app_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_app_settings" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:fontFamily="@font/poppins_regular"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:fontFamily="@font/poppins_regular"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:fontFamily="@font/poppins_regular"
            android:title="@string/menu_logout" />
    </group>
</menu>