<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        style="@style/SellerInfo.Value"
        android:id="@+id/txtLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/app_bar"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Login.Label"
        android:id="@+id/txtLogoutMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/logout_confirmation"
        android:textColor="@color/lbl_color"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogoutCancel"
        style="@style/ButtonRedActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/cp_cancel"
        android:textColor="@color/app_red"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtLogoutMessage"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/txtLogoutMessage"
        app:layout_constraintTop_toBottomOf="@+id/txtLogoutMessage"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        style="@style/ButtonRedActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="31dp"
        android:text="@string/forgot_password_ok"
        app:layout_constraintEnd_toEndOf="@+id/txtLogoutMessage"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/btnLogoutCancel"
        app:layout_constraintTop_toTopOf="@+id/btnLogoutCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>