<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:padding="16dp"
android:layout_height="match_parent">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtCancelInspection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_cancel_inspection"
    android:textColor="@color/app_bar"
    android:textSize="@dimen/cp_lbl_text_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancelReason"
        style="@style/Login.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_reason"
        android:textColor="@color/lbl_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCancelInspection" />

    <Spinner
        android:id="@+id/dtfCancelInspection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvCancelReason"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvCancelReason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancelReason"
        app:valueHint="" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancelComments"
        style="@style/Login.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_comments"
        android:textColor="@color/lbl_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtfCancelInspection" />

<EditText
    android:id="@+id/dtfCancelComments"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/tvCancelComments"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvCancelComments"
    app:valueHint="" />
    <include
        android:id="@+id/btnCancelInspectionSubmit"
        layout="@layout/progress_btn_layout"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/inspector_submit"
        app:layout_constraintEnd_toEndOf="@+id/dtfCancelComments"
        app:layout_constraintStart_toStartOf="@+id/dtfCancelComments"
        app:layout_constraintTop_toBottomOf="@+id/dtfCancelComments" />
</androidx.constraintlayout.widget.ConstraintLayout>