<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="15dp"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        style="@style/Login.Label"
        android:id="@+id/txtChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject_confirmation"
        android:textColor="@color/app_bar"
        android:textSize="@dimen/cp_lbl_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOldPassword"
        style="@style/Login.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reject_reason"
        android:textColor="@color/lbl_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePassword" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/dtfRejectReason"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOldPassword" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewPassword"
        style="@style/Login.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reject_comments"
        android:textColor="@color/lbl_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtfRejectReason" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dtfNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/login_edit_hint"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPassword"
        app:valueHint="">

        <EditText
            style="@style/Login.Label"
            android:id="@+id/edComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:gravity="start|top"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelChangePwd"
        style="@style/ButtonWhiteActive"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cp_cancel"
        android:textColor="@color/app_red"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnChangePassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtfNewPassword" />

    <include
        android:id="@+id/btnChangePassword"
        layout="@layout/progress_btn_layout"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cp_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelChangePwd"
        app:layout_constraintTop_toTopOf="@+id/btnCancelChangePwd" />

</androidx.constraintlayout.widget.ConstraintLayout>